# google-scholar_simple-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: AGENTS.md  DEVELOPMENT.md  PRD.md
.github/workflows/: ci.yml
tests/: conftest.py  test_scholar_basic.py
tests/fixtures/: sample_data.py
